# bal_cppcon2025

./: CMakeLists.txt  package.xml
config/: bal_optimization_params.yaml  params.yaml
include/: hybrid_pipeline.h  param_reader.h  visualize_dataset.h
include/parser/: data_model.h  data_parser.h
include/utils/: data_stats.h
launch/: main_bal_optimization_launch.py  main_visualize_dataset_launch.py
src/: hybrid_pipeline.cpp  main_bal_optimization_node.cpp  main_visualize_dataset.cpp  visualize_dataset.cpp
src/parser/: data_parser.cpp
src/utils/: data_stats.cpp
