<?xml version="1.0"?>
<package format="3">
  <name>bundle_adjustment_at_large_cppcon</name>
  <version>0.0.1</version>
  <description>Visualizer for BAL dataset using ROS 2 markers</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
